Adding imports to init files and changing some extra imports

--- a/notebooks/differencial_privacy_basic_concepts.ipynb
+++ b/notebooks/differencial_privacy_basic_concepts.ipynb
@@ -4,9 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
+    "import shfl\n",
     "\n",
     "def get_binary_vector_with_mean(mean, size):\n",
     "    array_ones = np.ones((int(mean * size), 1))\n",
@@ -31,8 +40,6 @@
     }
    ],
    "source": [
-    "from shfl.core import data\n",
-    "\n",
     "array = get_binary_vector_with_mean(0.6, 10000)\n",
     "print(len(array))\n",
     "print(np.mean(array))"
@@ -44,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shfl.core.query import Query\n",
+    "from shfl.core import Query\n",
     "\n",
     "class RandomizedQuery(Query):\n",
     "    def get(self, array):\n",
@@ -63,11 +70,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shfl.core.federated_operation\n",
-    "\n",
     "def diff_privacy_mean_test(mean, data_size):\n",
     "    array = get_binary_vector_with_mean(mean, data_size)\n",
-    "    federated_array = data.federate_array(\"my_federated_array\", array, data_size)\n",
+    "    federated_array = shfl.core.federated_operation.federate_array(\"my_federated_array\", array, data_size)\n",
     "    result = shfl.core.federated_operation.query_federated_data(federated_array, RandomizedQuery())\n",
     "    prob_head = 0.5\n",
     "    p1_given_1 = prob_head + (1 - prob_head) * prob_head\n",
@@ -91,33 +96,33 @@
      "output_type": "stream",
      "text": [
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.5\n",
-      "Differencial query removing noise: 0.5\n",
+      "Differencial query mean result: 0.6\n",
+      "Differencial query removing noise: 0.7\n",
       "\n",
       "\n",
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.53\n",
-      "Differencial query removing noise: 0.56\n",
+      "Differencial query mean result: 0.68\n",
+      "Differencial query removing noise: 0.8600000000000001\n",
       "\n",
       "\n",
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.651\n",
-      "Differencial query removing noise: 0.802\n",
+      "Differencial query mean result: 0.635\n",
+      "Differencial query removing noise: 0.77\n",
       "\n",
       "\n",
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.6556\n",
-      "Differencial query removing noise: 0.8111999999999999\n",
+      "Differencial query mean result: 0.6506\n",
+      "Differencial query removing noise: 0.8011999999999999\n",
       "\n",
       "\n",
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.65121\n",
-      "Differencial query removing noise: 0.8024199999999999\n",
+      "Differencial query mean result: 0.64895\n",
+      "Differencial query removing noise: 0.7979\n",
       "\n",
       "\n",
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.649972\n",
-      "Differencial query removing noise: 0.799944\n",
+      "Differencial query mean result: 0.650069\n",
+      "Differencial query removing noise: 0.800138\n",
       "\n",
       "\n"
      ]
