Created interface to configure access to node private data. Now is posible to add a randomization algorithm in that point.

--- a/notebooks/differencial_privacy_basic_concepts.ipynb
+++ b/notebooks/differencial_privacy_basic_concepts.ipynb
@@ -18,8 +18,8 @@
     "import shfl\n",
     "\n",
     "def get_binary_vector_with_mean(mean, size):\n",
-    "    array_ones = np.ones((int(mean * size), 1))\n",
-    "    array_zeros = np.zeros((size - (int(mean * size)), 1))\n",
+    "    array_ones = np.ones((int(mean * size)))\n",
+    "    array_zeros = np.zeros((size - (int(mean * size))))\n",
     "    array = np.concatenate((array_ones, array_zeros), axis = 0)\n",
     "    np.random.shuffle(array)\n",
     "    return array"
@@ -37,12 +37,23 @@
       "10000\n",
       "0.6\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(10000,)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "array = get_binary_vector_with_mean(0.6, 10000)\n",
     "print(len(array))\n",
-    "print(np.mean(array))"
+    "print(np.mean(array))\n",
+    "array.shape"
    ]
   },
   {
@@ -51,44 +62,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shfl.core import Query\n",
+    "from shfl.core.data import UnprotectedAccess\n",
+    "from shfl.core.data import DataAccessDefinition\n",
+    "from shfl.core.dp_mechanism import RandomizeBinaryProperty\n",
     "\n",
-    "class RandomizedQuery(Query):\n",
-    "    def get(self, array):\n",
-    "        coin_flip = np.random.rand()\n",
-    "        if (coin_flip > 0.5):\n",
-    "            return array\n",
-    "        second_coin_flip = np.random.rand()\n",
-    "        if (second_coin_flip > 0.5):\n",
-    "            return np.array([[1.0]])\n",
-    "        return np.array([[0.0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def diff_privacy_mean_test(mean, data_size):\n",
+    "    noise = 0.2\n",
+    "    mean_noise_distribution = 0.2\n",
     "    array = get_binary_vector_with_mean(mean, data_size)\n",
     "    federated_array = shfl.core.federated_operation.federate_array(\"my_federated_array\", array, data_size)\n",
-    "    result = shfl.core.federated_operation.query_federated_data(federated_array, RandomizedQuery())\n",
-    "    prob_head = 0.5\n",
-    "    p1_given_1 = prob_head + (1 - prob_head) * prob_head\n",
-    "    p1_given_0 = (1 - prob_head) * prob_head\n",
+    "    data_access_definition = DataAccessDefinition(dp_mechanism=RandomizeBinaryProperty(noise, mean_noise_distribution))\n",
+    "    federated_array.configure_data_access(data_access_definition)\n",
+    "    result = federated_array.query()\n",
     "    \n",
-    "    noise_removed_result = (np.mean(result) - p1_given_0)/(p1_given_1 - p1_given_0)\n",
+    "    noise_removed_result = (np.mean(result) - mean_noise_distribution*(noise))/(1-noise)\n",
     "    \n",
     "    print(\"Generated binary vector with mean: \" + str(np.mean(array)))\n",
     "    print(\"Differencial query mean result: \" + str(np.mean(result)))\n",
+    "    print(\"Differencial query mean result: \" + str(mean*(1-noise) + mean_noise_distribution * noise))\n",
     "    print(\"Differencial query removing noise: \" + str(noise_removed_result))\n",
     "    print (\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,32 +95,38 @@
      "text": [
       "Generated binary vector with mean: 0.8\n",
       "Differencial query mean result: 0.6\n",
-      "Differencial query removing noise: 0.7\n",
+      "Differencial query mean result: 0.6800000000000002\n",
+      "Differencial query removing noise: 0.6999999999999998\n",
       "\n",
       "\n",
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.68\n",
-      "Differencial query removing noise: 0.8600000000000001\n",
+      "Differencial query mean result: 0.67\n",
+      "Differencial query mean result: 0.6800000000000002\n",
+      "Differencial query removing noise: 0.7875\n",
       "\n",
       "\n",
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.635\n",
-      "Differencial query removing noise: 0.77\n",
+      "Differencial query mean result: 0.688\n",
+      "Differencial query mean result: 0.6800000000000002\n",
+      "Differencial query removing noise: 0.8099999999999998\n",
       "\n",
       "\n",
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.6506\n",
-      "Differencial query removing noise: 0.8011999999999999\n",
+      "Differencial query mean result: 0.674\n",
+      "Differencial query mean result: 0.6800000000000002\n",
+      "Differencial query removing noise: 0.7925\n",
       "\n",
       "\n",
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.64895\n",
-      "Differencial query removing noise: 0.7979\n",
+      "Differencial query mean result: 0.67884\n",
+      "Differencial query mean result: 0.6800000000000002\n",
+      "Differencial query removing noise: 0.7985499999999999\n",
       "\n",
       "\n",
       "Generated binary vector with mean: 0.8\n",
-      "Differencial query mean result: 0.650069\n",
-      "Differencial query removing noise: 0.800138\n",
+      "Differencial query mean result: 0.680108\n",
+      "Differencial query mean result: 0.6800000000000002\n",
+      "Differencial query removing noise: 0.8001349999999999\n",
       "\n",
       "\n"
      ]
