Removing identifier for federated data

--- a/notebooks/basic_concepts_tensorflow.ipynb
+++ b/notebooks/basic_concepts_tensorflow.ipynb
@@ -85,7 +85,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1440929d0>"
+       "<matplotlib.image.AxesImage at 0x14047a6d0>"
       ]
      },
      "execution_count": 3,
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "iid_distribution = shfl.data_distribution.IidDataDistribution(database)\n",
-    "federated_data, test_data, test_label = iid_distribution.get_federated_data(\"emnist\", 20, percent=10)"
+    "federated_data, test_data, test_label = iid_distribution.get_federated_data(num_nodes=20, percent=10)"
    ]
   },
   {
@@ -136,7 +136,7 @@
       "20\n",
       "Node private data, you can see the data for debug purposes but the data remains in the node\n",
       "<class 'dict'>\n",
-      "{'emnist': <shfl.private.data.LabeledData object at 0x144207290>}\n"
+      "{'5365380304': <shfl.private.data.LabeledData object at 0x1407939d0>}\n"
      ]
     }
    ],
@@ -302,63 +302,73 @@
      "output_type": "stream",
      "text": [
       "Accuracy round 0\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207410>: 0.677\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207490>: 0.540075\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x14dcb3a10>: 0.6105\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x105d5c2d0>: 0.49485\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207210>: 0.54225\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1442079d0>: 0.5603\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207190>: 0.62965\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1442075d0>: 0.63035\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1442078d0>: 0.501425\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207f10>: 0.55015\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207bd0>: 0.6187\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c91d0>: 0.635525\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9350>: 0.6764\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c94d0>: 0.554825\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9650>: 0.616275\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c97d0>: 0.4557\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9950>: 0.420225\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9ad0>: 0.64725\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9c50>: 0.6211\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9dd0>: 0.6364\n",
-      "Global model test Accuracy Client : 0.5282\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13c3041d0>: [1.0242092789649964, 0.756875]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793710>: [1.0315838547229768, 0.72905]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793590>: [0.9230242709636688, 0.76865]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793b10>: [0.9473623756885529, 0.732825]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793e50>: [1.0436773769378662, 0.6943]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793610>: [1.0017102278232575, 0.751275]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793950>: [1.1289456703662872, 0.659275]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6110>: [1.0575414234638214, 0.710275]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a62d0>: [1.0982883253097535, 0.684575]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a64d0>: [1.2178401401519776, 0.621825]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6610>: [1.152757443189621, 0.632225]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a67d0>: [1.1558524098873137, 0.71375]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6990>: [1.027539532661438, 0.725725]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6b50>: [1.083028394651413, 0.69015]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6d10>: [0.958556552028656, 0.708725]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6ed0>: [1.039856890964508, 0.732075]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a80d0>: [1.1406471440315247, 0.648575]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a8290>: [1.0337669112682342, 0.739]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a8450>: [1.0389446280002594, 0.674225]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a8610>: [0.9435076283931733, 0.78515]\n",
+      "Global model test performance : [1.3576786245346069, 0.71235]\n",
       "\n",
       "\n",
       "\n",
       "Accuracy round 1\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207410>: 0.777175\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207490>: 0.7811\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x14dcb3a10>: 0.774375\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x105d5c2d0>: 0.68675\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207210>: 0.7461\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1442079d0>: 0.760375\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207190>: 0.800025\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1442075d0>: 0.743375\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1442078d0>: 0.6748\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207f10>: 0.736175\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207bd0>: 0.816225\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c91d0>: 0.774575\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9350>: 0.70585\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c94d0>: 0.802325\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9650>: 0.7849\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c97d0>: 0.6527\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9950>: 0.710125\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9ad0>: 0.790975\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9c50>: 0.80805\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1443c9dd0>: 0.793725\n",
-      "Global model test Accuracy Client : 0.829075\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13c3041d0>: [0.6803559416294098, 0.814575]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793710>: [0.5974831504583359, 0.812975]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793590>: [0.5770124184012413, 0.826575]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793b10>: [0.6144213872194291, 0.8076]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793e50>: [0.5669109980583191, 0.8627]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793610>: [0.5306376527547836, 0.861025]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793950>: [0.6630505234479904, 0.822175]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6110>: [0.5015421150803566, 0.878375]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a62d0>: [0.5913092964172363, 0.84035]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a64d0>: [0.6719655542850494, 0.8213]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6610>: [0.6660203584671021, 0.7838]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a67d0>: [0.6849799702882766, 0.784175]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6990>: [0.5929895525932312, 0.8219]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6b50>: [0.6051027598619461, 0.83265]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6d10>: [0.603307437813282, 0.83345]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6ed0>: [0.5591190741658211, 0.86285]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a80d0>: [0.6684623269796371, 0.7835]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a8290>: [0.5955318391799926, 0.8193]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a8450>: [0.5874164388775825, 0.82705]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a8610>: [0.5914566462278366, 0.85125]\n",
+      "Global model test performance : [0.5351945951104164, 0.88255]\n",
       "\n",
       "\n",
       "\n",
       "Accuracy round 2\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207410>: 0.83855\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207490>: 0.816025\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x14dcb3a10>: 0.83735\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x105d5c2d0>: 0.8206\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207210>: 0.85335\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x1442079d0>: 0.7999\n",
-      "Test Accuracy Client <shfl.private.node.DataNode object at 0x144207190>: 0.856375\n"
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13c3041d0>: [0.41901204435825345, 0.889425]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793710>: [0.4693863484978676, 0.872625]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793590>: [0.4677216958165169, 0.8599]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793b10>: [0.3721510604143143, 0.8945]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793e50>: [0.4210657379508018, 0.88955]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793610>: [0.40915924479961396, 0.885225]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x140793950>: [0.37384547572135923, 0.897525]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6110>: [0.37993441422581675, 0.901075]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a62d0>: [0.4156119112968445, 0.879375]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a64d0>: [0.4302292131304741, 0.866575]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6610>: [0.4227825216829777, 0.873]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a67d0>: [0.5640277123093606, 0.821375]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6990>: [0.401500437438488, 0.878675]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6b50>: [0.37951561205387113, 0.897525]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6d10>: [0.40165046803951265, 0.8921]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a6ed0>: [0.40295899804830554, 0.887775]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1407a80d0>: [0.4128782586693764, 0.87115]\n"
      ]
     }
    ],
@@ -367,6 +377,13 @@
     "test_data = test_data.astype(np.float32)\n",
     "federated_government.run_rounds(3, test_data, test_label)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
